[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/Secuela-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Secuela-Italic.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/Secuela-Bold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/fonts/Secuela-BoldItalic.otf" type="DynamicFontData" id=5]
[ext_resource path="res://BoostWidget.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.501961 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="BoostWidget" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="vbox" type="VBoxContainer" parent="margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1276.0
margin_bottom = 716.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="RichTextLabel" parent="margin/vbox"]
margin_right = 1272.0
margin_bottom = 48.0
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[b]title[/b]

description"
text = "title

description"
fit_content_height = true
scroll_active = false

[node name="progress_bar" type="ProgressBar" parent="margin/vbox"]
margin_top = 52.0
margin_right = 1272.0
margin_bottom = 67.0
theme = ExtResource( 4 )
max_value = 1.0

[node name="action_btn" type="Button" parent="margin/vbox"]
margin_left = 1202.0
margin_top = 71.0
margin_right = 1272.0
margin_bottom = 101.0
rect_min_size = Vector2( 70, 30 )
size_flags_horizontal = 8
theme = ExtResource( 4 )
text = "Boost"

[connection signal="pressed" from="margin/vbox/action_btn" to="." method="_on_action_btn_pressed"]
